--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -9,6 +9,8 @@
   <repository path="..\core\Akka.Cluster\packages.config" />
   <repository path="..\core\Akka.FSharp.Tests\packages.config" />
   <repository path="..\core\Akka.FSharp\packages.config" />
+  <repository path="..\core\Akka.MultiNodeTestRunner\packages.config" />
+  <repository path="..\core\Akka.NodeTestRunner\packages.config" />
   <repository path="..\core\Akka.Remote.TestKit.Tests\packages.config" />
   <repository path="..\core\Akka.Remote.TestKit\packages.config" />
   <repository path="..\core\Akka.Remote.Tests\packages.config" />
