fixed a bunch of Config bugs with TestKit

--- a/src/core/Akka/Configuration/Pigeon.conf
+++ b/src/core/Akka/Configuration/Pigeon.conf
@@ -245,7 +245,7 @@ akka {
 	}
 
 	task-dispatcher {
-		type = "Akka.Dispatch.TaskDispatcher"
+		type = "Akka.Dispatch.TaskDispatcherConfigurator"
 		throughput = 100
 	}
     
