--- a/src/core/Akka/Akka.csproj
+++ b/src/core/Akka/Akka.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Event\LogMessage.cs" />
     <Compile Include="Event\StandardOutLogger.cs" />
     <Compile Include="Routing\ConsistentHashRouter.cs" />
+    <Compile Include="Routing\TailChoppingPool.cs" />
     <Compile Include="Util\Guard.cs" />
     <Compile Include="Util\ContinuousEnumerator.cs" />
     <Compile Include="Util\Internal\ImmutabilityUtils.cs" />
