--- a/src/core/Akka/Configuration/Pigeon.conf
+++ b/src/core/Akka/Configuration/Pigeon.conf
@@ -248,6 +248,16 @@ akka {
 		type = "Akka.Dispatch.TaskDispatcherConfigurator"
 		throughput = 100
 	}
+
+	default-fork-join-dispatcher{
+		type = ForkJoinDispatcher
+		throughput = 100
+		dedicated-thread-pool{ #settings for Helios.DedicatedThreadPool
+			thread-count = 3 #number of threads
+			#deadlock-timeout = 3s #optional timeout for deadlock detection
+			threadtype = background #values can be "background" or "foreground"
+		}
+	}
     
     default-dispatcher {
       # Must be one of the following
