enabled remoting in Mono

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -8,6 +8,8 @@
   <repository path="../contrib/loggers/Akka.Logger.slf4net/packages.config" />
   <repository path="../contrib/testkits/Akka.TestKit.Xunit/packages.config" />
   <repository path="../core/Akka.Cluster/packages.config" />
+  <repository path="../core/Akka.FSharp.Tests/packages.config" />
+  <repository path="../core/Akka.FSharp/packages.config" />
   <repository path="../core/Akka.MultiNodeTestRunner.Shared.Tests/packages.config" />
   <repository path="../core/Akka.MultiNodeTestRunner.Shared/packages.config" />
   <repository path="../core/Akka.MultiNodeTestRunner/packages.config" />
@@ -25,6 +27,9 @@
   <repository path="../examples/Cluster/Routing/Samples.Cluster.ConsistentHashRouting/packages.config" />
   <repository path="../examples/Cluster/Samples.Cluster.Simple/packages.config" />
   <repository path="../examples/FaultTolerance/packages.config" />
+  <repository path="../examples/FSharp.Api/packages.config" />
+  <repository path="../examples/PersistenceExample.FsApi/packages.config" />
   <repository path="../examples/Stocks/SymbolLookup/packages.config" />
   <repository path="../examples/TimeServer/TimeClient/packages.config" />
+  <repository path="../examples/TimeServer/TimeServer/packages.config" />
 </repositories>
