--- a/src/core/Akka.Remote/packages.config
+++ b/src/core/Akka.Remote/packages.config
@@ -3,4 +3,8 @@
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net45" />
   <package id="Helios" version="2.1.2" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
+  <package id="DotNetty.Buffers" version="0.2.0" targetFramework="net45" />
+  <package id="DotNetty.Codecs" version="0.2.0" targetFramework="net45" />
+  <package id="DotNetty.Common" version="0.2.0" targetFramework="net45" />
+  <package id="DotNetty.Transport" version="0.2.0" targetFramework="net45" />
 </packages>
