--- a/src/core/Akka.Remote/Configuration/Remote.conf
+++ b/src/core/Akka.Remote/Configuration/Remote.conf
@@ -294,7 +294,7 @@ akka {
       # interface and offer a public constructor which takes two arguments:
       #  1) akka.actor.ExtendedActorSystem
       #  2) com.typesafe.config.Config
-      transport-class = "Akka.Remote.Transport.Helios.HeliosTcpTransport,Akka.Remote"
+      transport-class = "Akka.Remote.Transport.DotNetty.DotNettyTransport,Akka.Remote"
 
       # Transport drivers can be augmented with adapters by adding their
       # name to the applied-adapters list. The last adapter in the
