--- a/src/core/Akka.Remote/Configuration/Remote.conf
+++ b/src/core/Akka.Remote/Configuration/Remote.conf
@@ -310,6 +310,10 @@ akka {
       # This port needs to be unique for each actor system on the same machine.
       port = 2552
 
+	  # The preferred DNS resolution IP family.
+	  # Valid values are "IPv6" and "IPv4"
+	  ip-family = IPv6
+
       # The hostname or ip to bind the remoting to,
       # InetAddress.getLocalHost.getHostAddress is used if empty
       hostname = ""
