--- a/src/core/Akka/Akka.csproj
+++ b/src/core/Akka/Akka.csproj
@@ -253,6 +253,13 @@
     <Compile Include="IO\UdpSender.cs" />
     <Compile Include="IO\WithUdpSend.cs" />
     <Compile Include="Pattern\BackoffSupervisorBase.cs" />
+    <Compile Include="Pattern\BackoffSupervisor.cs" />
+    <Compile Include="IO\Dns.cs" />
+    <Compile Include="IO\DnsProvider.cs" />
+    <Compile Include="IO\InetAddressDnsProvider.cs" />
+    <Compile Include="IO\InetAddressDnsResolver.cs" />
+    <Compile Include="IO\SimpleDnsCache.cs" />
+    <Compile Include="IO\SimpleDnsManager.cs" />
     <Compile Include="Pattern\CircuitBreaker.cs" />
     <Compile Include="Pattern\CircuitBreakerState.cs" />
     <Compile Include="Pattern\FutureTimeoutSupport.cs" />
@@ -260,12 +267,10 @@
     <Compile Include="Routing\ConsistentHashRouter.cs" />
     <Compile Include="Serialization\JavaSerializer.cs" />
     <Compile Include="IO\ByteBuffer.cs" />
-    <Compile Include="IO\DirectByteBufferPool.cs" />
+    <Compile Include="IO\SocketEventArgsPool.cs" />
     <Compile Include="IO\Inet.cs" />
     <Compile Include="IO\IO.cs" />
-    <Compile Include="IO\SelectionHandler.cs" />
     <Compile Include="IO\SocketAsyncEventArgsPool.cs" />
-    <Compile Include="IO\SocketChannel.cs" />
     <Compile Include="IO\Tcp.cs" />
     <Compile Include="IO\TcpConnection.cs" />
     <Compile Include="IO\TcpIncomingConnection.cs" />
