--- a/src/core/Akka.Remote/Akka.Remote.csproj
+++ b/src/core/Akka.Remote/Akka.Remote.csproj
@@ -146,6 +146,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteActorRefProvider.cs" />
     <Compile Include="IPExtensions.cs" />
+    <Compile Include="Transport\AkkaIO\AddressConverters.cs" />
+    <Compile Include="Transport\AkkaIO\AkkaIOTransport.cs" />
+    <Compile Include="Transport\AkkaIO\ConnectionAssociation.cs" />
+    <Compile Include="Transport\AkkaIO\TransportListener.cs" />
+    <Compile Include="Transport\AkkaIO\TransportManager.cs" />
     <Compile Include="Transport\AkkaPduCodec.cs" />
     <Compile Include="Transport\DotNetty\AkkaLoggingHandler.cs" />
     <Compile Include="Transport\DotNetty\DotNettyTransportSettings.cs" />
